--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   cached_network_image: ^3.2.1
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
   
   
 
@@ -63,10 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/ValorantLogo.png
-      - assets/images/Person.png
-      - assets/images/AgentIcon.png
-      - assets/images/WeaponIcon.png
+      - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
